Expanded package description in README and DESCRIPTION, and finished vignette

--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -1,4 +1,11 @@
 
+@book{ohno2013evolution,
+  title={Evolution by gene duplication},
+  author={Ohno, Susumu},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
 @article{yates2022ensembl,
   title={Ensembl Genomes 2022: an expanding genome resource for non-vertebrates},
   author={Yates, Andrew D and Allen, James and Amode, Ridwan M and Azov, Andrey G and Barba, Matthieu and Becerra, Andr{\'e}s and Bhai, Jyothish and Campbell, Lahcen I and Carbajo Martinez, Manuel and Chakiachvili, Marc and others},
